--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,18 @@ body{
     
     background-color: #F3FFFF;
 }
+.home_page{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 65%;
+    margin: 0PX auto;
+    height: 700px;
+border: 3px solid red;
+}
+.home_page>*{
+    padding: 10PX;
+    margin: 10PX;
+    border-radius: 10px;
+}
