--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,8 @@ border: 3px solid red;
     margin: 10PX;
     border-radius: 10px;
 }
+.hom_heading{
+    width: 95%;
+    height: 100px;
+    margin: 30px;
+  }
