--- a/css/style.css
+++ b/css/style.css
@@ -56,4 +56,89 @@ border: 3px solid red;
     overflow: hidden;
     clear: both;
   }
-  
+  .wrap{
+    height: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    clear: both;
+  }
+
+.home_page button{
+    
+        min-width: 185px;
+        min-height: 55px;
+        font-family: 'Nunito', sans-serif;
+        font-size: 22px;
+        text-transform: uppercase;
+        letter-spacing: 1.3px;
+        font-weight: 700;
+        color: #313133;
+        background: #4FD1C5;
+      background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+        border: none;
+        border-radius: 1000px;
+        box-shadow: 0px 0px 24px rgba(79,209,197,.64);
+        transition: all 0.3s ease-in-out 0s;
+        cursor: pointer;
+        outline: none;
+        position: relative;
+        padding: 10px;
+        }
+    
+      .start_quiz button::before {
+      content: '';
+        border-radius: 1000px;
+        min-width: calc(185px + 10px);
+        min-height: calc(55px + 10px);
+        border: 6px solid #00FFCB;
+        box-shadow: 0 0 60px rgba(0,255,203,.64);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        transition: all .3s ease-in-out 0s;
+      }
+      
+      .start_quiz:hover, .start_quiz:focus {
+        color: #313133;
+        transform: translateY(-6px);
+      }
+      
+      .start_quiz button:hover::before, .start_quiz button:focus::before {
+        opacity: 1;
+      }
+      
+      .start_quiz button::after {
+        content: '';
+        width: 55px; height: 55px;
+        border-radius: 100%;
+        border: 6px solid #00FFCB;
+        position: absolute;
+        z-index: -1;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        animation: ring 1.5s infinite;
+      }
+      
+      .start_quiz button:hover::after, .start_quiz button:focus::after {
+        animation: none;
+        display: none;
+      }
+      
+      @keyframes ring {
+        0% {
+          width: 55px;
+          height: 55px;
+          opacity: 1;
+        }
+        100% {
+          position:absolute;
+          width: 185px;
+          height: 185px;
+          opacity: 0;
+        }
+      }
