--- a/css/style.css
+++ b/css/style.css
@@ -142,3 +142,31 @@ border: 3px solid red;
           opacity: 0;
         }
       }
+      .instructions{
+        width: 900px;
+        height: 600px;
+        background: #fff;
+        border-radius: 30px;
+        transform: translate(-50%, -50%) scale(0.9);
+        opacity: 0;
+        pointer-events: none;
+        transition: all 0.3s ease;
+    }
+    .instructions .instr_head{
+        height: 120px;
+        width: 100%;
+        border-bottom: 1px solid #00FFCB;;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 30px;
+        border-radius: 5px 5px 0 0;
+        font-size: 20px;
+        font-weight: 600;
+    }
+    .instructions .instr_body{
+        height: 355px;
+        padding: 60px 100px;
+        margin: 5px 0;
+        font-size: 22px;
+    }
