--- a/css/style.css
+++ b/css/style.css
@@ -170,3 +170,19 @@ border: 3px solid red;
         margin: 5px 0;
         font-size: 22px;
     }
+    .instructions,.quiz_page,.results_page{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 0px 20px  #4fd1c5, 
+    0px 50px 600px 600px #F3FFFF;
+}
+
+.instructions.activeInfo,.quiz_page.activeQuiz,.results_page.activeResult{
+    opacity: 1;
+    z-index: 4;
+    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(1);
+    background-blend-mode: color;
+}
