--- a/css/style.css
+++ b/css/style.css
@@ -186,3 +186,25 @@ border: 3px solid red;
     transform: translate(-50%, -50%) scale(1);
     background-blend-mode: color;
 }
+.instructions .buttons{
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 30px;
+    border-top: 1px solid lightgrey;
+}
+
+.instructions .buttons button{
+    margin: 0 5px;
+    height: 40px;
+    width: 100px;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid #4FD1C5;
+    transition: all 0.3s ease;
+}
