--- a/css/style.css
+++ b/css/style.css
@@ -218,4 +218,55 @@ border: 3px solid red;
     pointer-events: none;
     transition: all 0.3s ease;
 }
+.quiz_page header{
+    position: relative;
+    z-index: 2;
+    height: 200px;
+    padding: 0 30px;
+    background: #fff;
+    border-radius: 30px 30px 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 0px 1px 1px rgba(0,0,0,0.1);
+}
+
+.quiz_page header .quiz_head{
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.quiz_page header .clock{
+    color: black;
+    background: #cce5ff;
+    border: 1px solid #b8daff;
+    height: 45px;
+    padding: 0 8px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 40%;
+    margin-left: 30px;
+}
+
+.quiz_page header .clock .show-time{
+    font-weight: 400;
+    font-size: 20px;
+    user-select: none;
+    width: 95%;
+}
+
+.quiz_page header .clock .count_down{
+    font-size: 18px;
+    font-weight: 500;
+    height: auto;
+    width: 100%;
+    color: black;
+    border-radius: 1000px;
+    text-align: center;
+    background: white;
+    border: 1px solid #343a40;
+    user-select: none;
+}
 
