--- a/css/style.css
+++ b/css/style.css
@@ -401,4 +401,20 @@ footer button.show{
     pointer-events: none;
     transition: all 0.3s ease;
 }
+.results_page .complete_text{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.results_page .score_text span{
+    display: flex;
+    margin: 10px 0;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.results_page .score_text span p{
+    padding: 0 4px;
+    font-weight: 600;
+}
 
