add style to all the buttons

--- a/css/style.css
+++ b/css/style.css
@@ -417,4 +417,42 @@ footer button.show{
     padding: 0 4px;
     font-weight: 600;
 }
+.results_page .buttons{
+    display: flex;
+    margin: 20px 0;
+}
+
+.results_page .buttons button{
+    margin: 0 10px;
+    height: 45px;
+    padding: 0 20px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid #4FD1C5;
+    transition: all 0.3s ease;
+}
+
+.buttons .restart{
+    color: #fff;
+    background: #4FD1C5;
+}
+
+.buttons .restart:hover{
+    background: #fff;
+    color: #4FD1C5;
+}
+
+.buttons .exit_quiz{
+    color: #4FD1C5;
+    background: #fff;
+}
+
+.buttons .exit_quiz:hover{
+    color: #fff;
+    background: #4FD1C5;
+}
 
