add responsive to smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,5 +456,304 @@ footer button.show{
     background: #4FD1C5;
 }
 
+@media(min-width:1025px) {
+    
+    .wrap{
+        height: 40%;
+        padding-top: 10px;
+        margin-top: 10px;
+    }
+}
+    @media(min-width:769px) and (max-width:1024px){
+       
+        .home_page{
+            width: 95%;
+            height: 620px;
+        }
+        .logo{
+            font-size: 20px;
+        }
+        .hom_main{
+            width: 63%;
+        }
+        .hom_text{
+            font-size: 12px;
+        }
+        .wrap{
+            height: 40%;
+            width: 38%;
+        }
+        .instructions{
+            width: 95%;
+            height: 95%;
+            font-size: 21;
+        }
+        .quiz_page{
+            width: 95%;
+            height: 95%;
+            font-size: 21;  
+        }
+        .results_page{
+            width: 50%;
+            height: 50%; 
+        }
+        .quiz_page header{
+            height: 180px;
+        }
+        .quiz_page header .time_line{
+            margin-left: 20px;
+        }
 
+        .home_page button{
+            font-size: 17px;
+            letter-spacing: 1p;
+            min-width: 90px;
+            min-height: 20px;
+        }
+        .start_quiz button::before{
+            min-width: calc(115px + 7px);
+            min-height: calc(20px + 7px);
+        }
+        .start_quiz button:hover::after, .start_quiz button:focus::after {
+            animation: none;
+            display: none;
+          }
+          
+          @keyframes ring {
+            0% {
+              width: 30px;
+              height: 30px;
+              opacity: 1;
+            }
+            100% {
+              position:absolute;
+              width: 115px;
+              height: 115px;
+              opacity: 0.5;
+            }
+        }
+    }
+    @media (min-width:481px) and (max-width:769px) {
+        .home_page{
+            width: 95%;
+        }
+        .logo{
+            font-size: 25px;
+        }
+        .hom_main{
+            width: 65%;
+            height: 40%;
+        }
+        .hom_text{
+            font-size: 10px;
+            height: 350px;
+        }
+        .wrap{
+            height: 40%;
+        }
+        .home_page button{
+            font-size: 12px;
+            letter-spacing: 1p;
+            min-width: 90px;
+            min-height: 15px;
+            overflow: hidden;
+            clear: both;
+        }
+        .start_quiz button::before{
+            min-width: calc(90px + 4px);
+            min-height: calc(15px + 4px);
+        }
+        .start_quiz button:hover::after, .start_quiz button:focus::after {
+            animation: none;
+            display: none;
+          }
+          
+          @keyframes ring {
+            0% {
+              width: 25px;
+              height: 25px;
+              opacity: 1;
+            }
+            100% {
+              position:absolute;
+              width: 90px;
+              height: 90px;
+              opacity: 0.5;
+            }
+        }
+        .instructions{
+            width: 95%;
+            height: 95%;
+        }
+        
+        .instructions .instr_body{
+            height: 355px;
+            padding: 5px 5px;
+            margin: 5px 5px;
+            font-size: 21px;
+        }
+        .quiz_page{
+            width: 95%;
+            height: 95%;
+        }
 
+        .quiz_page section{
+            height: 355px;
+            padding: 5px 5px;
+            margin: 5px 5px;
+            font-size: 21px;
+        }
+        .results_page{
+            width: 70%;
+            height: 50%;
+        }
+        .results_page .score_text span{
+            font-size: 15px;
+        }
+        .quiz_page header .quiz_head{
+           font-size: 10px;
+           text-align: center;
+        }
+        .quiz_page header .sum_qstn span{
+            font-size: 10px;
+            text-align: center;
+            display: inline-block;
+        }
+        .quiz_page header .clock .show-time{
+            font-size: 10px;
+
+        }
+        .quiz_page header .time_line{
+            margin-left: 20px;
+        }
+    }
+
+    @media (min-width:320px) and (max-width:480px) {
+        .home_page{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 620px;
+        }
+
+        .logo{
+            font-size: 14px;
+        }
+        .hom_main{
+            width: 95%;
+        }
+        .hom_text{
+            font-size: 10px;
+        }
+        .instructions{
+            width: 95%;
+            height: 95%;
+        }
+        
+        .instructions .instr_body{
+            height: 355px;
+            padding: 5px 5px;
+            margin: 5px 5px;
+            font-size: 21px;
+        }
+        .quiz_page{
+            width: 95%;
+            height: 95%;
+        }
+
+        .quiz_page section{
+            height: 355px;
+            padding: 5px 5px;
+            margin: 5px 5px;
+            font-size: 21px;
+        }
+        .results_page{
+            width: 98%;
+        }
+        .results_page .score_text span{
+            font-size: 15px;
+        }
+        .quiz_page header .quiz_head{
+           font-size: 10px;
+           text-align: center;
+        }
+        .quiz_page header .sum_qstn span{
+            font-size: 10px;
+            text-align: center;
+            display: inline-block;
+        }
+        .quiz_page header .clock .show-time{
+            font-size: 10px;
+        }
+        .quiz_page header .time_line{
+            display: none;
+        }
+
+    }
+    @media (max-width:320px) {
+        .home_page{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 620px;
+        }
+
+        .logo{
+            font-size: 14px;
+        }
+        .hom_main{
+            width: 95%;
+        }
+        .hom_text{
+            font-size: 10px;
+        }
+        .instructions{
+            width: 95%;
+            height: 95%;
+        }
+        
+        .instructions .instr_body{
+            height: 355px;
+            padding: 5px 5px;
+            margin: 5px 5px;
+            font-size: 18px;
+        }
+        .quiz_page{
+            width: 95%;
+            height: 95%;
+        }
+
+        .quiz_page section{
+            height: 355px;
+            padding: 5px 5px;
+            margin: 5px 5px;
+            font-size: 21px;
+        }
+        .results_page{
+            width: 98%;
+            height: 95%;
+        }
+        .results_page .score_text span{
+            font-size: 15px;
+        }
+        .quiz_page header .quiz_head{
+           font-size: 10px;
+           text-align: center;
+        }
+        .quiz_page header .sum_qstn span{
+            font-size: 10px;
+            text-align: center;
+            display: inline-block;
+        }
+       
+        .quiz_page header .clock .show-time{
+            font-size: 10px;
+            width: 30px;
+        }
+        .quiz_page header .time_line{
+            display: none;
+        }
+
+    }
