--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,16 +29,16 @@ body{
     width: 95%;
     height: 100px;
     margin: 30px;
-  }
-  .logo{
+}
+.logo{
     display: flex;
     justify-content: center;
     align-items: center;
-      font-size: 35px;
-      text-shadow: 2px 7px 5px rgba(0,0,0,0.3), 
-      0px -4px 10px rgba(255,255,255,0.3);
-  }
-  .hom_main{
+    font-size: 35px;
+    text-shadow: 2px 7px 5px rgba(0,0,0,0.3), 
+    0px -4px 10px rgba(255,255,255,0.3);
+}
+.hom_main{
     width: 50%;
     margin: 0px auto;
     height: 550px;
@@ -46,130 +46,130 @@ body{
     flex-direction: column;
     align-items: center;
     border: 3px groove #4FD1C5;
-  }
-  .hom_text{
+}
+.hom_text{
     font-size: 14px;
     text-shadow: 1px 0px 0px rgba(0,0,0,0.3), 
     0px 0px 1px #4fd1c5;
     text-align:center;
     overflow: hidden;
     clear: both;
-  }
-  .wrap{
+}
+.wrap{
     height: 60%;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
     clear: both;
-  }
+}
 
-.home_page button{
+.home_page button{ 
+    min-width: 185px;
+    min-height: 55px;
+    font-family: 'Nunito', sans-serif;
+    font-size: 22px;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    font-weight: 700;
+    color: #313133;
+    background: #4FD1C5;
+    background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+    border: none;
+    border-radius: 1000px;
+    box-shadow: 0px 0px 24px rgba(79,209,197,.64);
+    transition: all 0.3s ease-in-out 0s;
+    cursor: pointer;
+    outline: none;
+    position: relative;
+    padding: 10px;
+}
+
+.start_quiz button::before {
+    content: '';
+    border-radius: 1000px;
+    min-width: calc(185px + 10px);
+    min-height: calc(55px + 10px);
+    border: 6px solid #00FFCB;
+    box-shadow: 0 0 60px rgba(0,255,203,.64);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all .3s ease-in-out 0s;
+}
     
-        min-width: 185px;
-        min-height: 55px;
-        font-family: 'Nunito', sans-serif;
-        font-size: 22px;
-        text-transform: uppercase;
-        letter-spacing: 1.3px;
-        font-weight: 700;
-        color: #313133;
-        background: #4FD1C5;
-      background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
-        border: none;
-        border-radius: 1000px;
-        box-shadow: 0px 0px 24px rgba(79,209,197,.64);
-        transition: all 0.3s ease-in-out 0s;
-        cursor: pointer;
-        outline: none;
-        position: relative;
-        padding: 10px;
-        }
+.start_quiz:hover, .start_quiz:focus {
+    color: #313133;
+    transform: translateY(-6px);
+}
     
-      .start_quiz button::before {
-      content: '';
-        border-radius: 1000px;
-        min-width: calc(185px + 10px);
-        min-height: calc(55px + 10px);
-        border: 6px solid #00FFCB;
-        box-shadow: 0 0 60px rgba(0,255,203,.64);
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        opacity: 0;
-        transition: all .3s ease-in-out 0s;
-      }
-      
-      .start_quiz:hover, .start_quiz:focus {
-        color: #313133;
-        transform: translateY(-6px);
-      }
-      
-      .start_quiz button:hover::before, .start_quiz button:focus::before {
+.start_quiz button:hover::before, .start_quiz button:focus::before {
+    opacity: 1;
+}
+    
+.start_quiz button::after {
+    content: '';
+    width: 55px; height: 55px;
+    border-radius: 100%;
+    border: 6px solid #00FFCB;
+    position: absolute;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: ring 1.5s infinite;
+}
+    
+.start_quiz button:hover::after, .start_quiz button:focus::after {
+    animation: none;
+    display: none;
+}
+    
+@keyframes ring {
+    0% {
+        width: 55px;
+        height: 55px;
         opacity: 1;
-      }
-      
-      .start_quiz button::after {
-        content: '';
-        width: 55px; height: 55px;
-        border-radius: 100%;
-        border: 6px solid #00FFCB;
-        position: absolute;
-        z-index: -1;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        animation: ring 1.5s infinite;
-      }
-      
-      .start_quiz button:hover::after, .start_quiz button:focus::after {
-        animation: none;
-        display: none;
-      }
-      
-      @keyframes ring {
-        0% {
-          width: 55px;
-          height: 55px;
-          opacity: 1;
-        }
-        100% {
-          position:absolute;
-          width: 185px;
-          height: 185px;
-          opacity: 0;
-        }
-      }
-      .instructions{
-        width: 900px;
-        height: 600px;
-        background: #fff;
-        border-radius: 30px;
-        transform: translate(-50%, -50%) scale(0.9);
+    }
+    100% {
+        position:absolute;
+        width: 185px;
+        height: 185px;
         opacity: 0;
-        pointer-events: none;
-        transition: all 0.3s ease;
     }
-    .instructions .instr_head{
-        height: 120px;
-        width: 100%;
-        border-bottom: 1px solid #00FFCB;;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 0 30px;
-        border-radius: 5px 5px 0 0;
-        font-size: 20px;
-        font-weight: 600;
-    }
-    .instructions .instr_body{
-        height: 355px;
-        padding: 60px 100px;
-        margin: 5px 0;
-        font-size: 22px;
-    }
-    .instructions,.quiz_page,.results_page{
+}
+.instructions{
+    width: 80%;
+    max-height: 95vh;
+    overflow-y: auto; 
+    background: #fff;
+    border-radius: 30px;
+    transform: translate(-50%, -50%) scale(0.9);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+.instructions .instr_head{
+    height: 120px;
+    width: 100%;
+    border-bottom: 1px solid #00FFCB;;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 30px;
+    border-radius: 5px 5px 0 0;
+    font-size: 20px;
+    font-weight: 600;
+}
+.instructions .instr_body{
+    height: auto;
+    padding: 60px 100px;
+    margin: 5px 0;
+    font-size: 22px;
+}
+.instructions,.quiz_page,.results_page, .explanations_page{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -178,7 +178,7 @@ body{
     0px 50px 600px 600px #F3FFFF;
 }
 
-.instructions.activeInfo,.quiz_page.activeQuiz,.results_page.activeResult{
+.instructions.activeInfo,.quiz_page.activeQuiz,.results_page.activeResult, .explanations_page.activeExplanation{
     opacity: 1;
     z-index: 4;
     pointer-events: auto;
@@ -208,8 +208,9 @@ body{
     transition: all 0.3s ease;
 }
 .quiz_page{
-    width: 900px;
-    height: 600px;
+    width: 80%;
+    max-height: 95vh; 
+    overflow-y: auto; 
     background: #fff;
     border-radius: 30px;
     transform: translate(-50%, -50%) scale(0.9);
@@ -220,13 +221,13 @@ body{
 .quiz_page header{
     position: relative;
     z-index: 2;
-    height: 200px;
+    min-height: 150px;
     padding: 0 30px;
     background: #fff;
     border-radius: 30px 30px 0 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     box-shadow: 0px 1px 1px rgba(0,0,0,0.1);
 }
 
@@ -239,7 +240,7 @@ body{
     color: black;
     background: #cce5ff;
     border: 1px solid #b8daff;
-    height: 45px;
+    min-height: 45px;
     padding: 0 8px;
     border-radius: 5px;
     display: flex;
@@ -268,13 +269,17 @@ body{
     border: 1px solid #343a40;
     user-select: none;
 }
-.quiz_page header .time_line{
+.quiz_page header .progression_line{
     position: absolute;
-    bottom: 0px;
-    margin-left: 120px;
-    width: 80%;
-    height: 30px;
-    background: #4FD1C5;
+    bottom: 0;
+    left: 20%; 
+    width: 60%; 
+    height: 8px;
+    background: linear-gradient(to right, #2c3e50, #4FD1C5);
+    border-radius: 4px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 10;
+    transition: width 1s ease-out;
 }
 .quiz_page header .sum_qstn span{
     display: flex;
@@ -291,6 +296,7 @@ body{
     padding-left: 0px;
 }
 section{
+    height: auto;
     padding: 25px 30px 20px 30px;
     background: #fff;
 }
@@ -345,8 +351,12 @@ section .option_list .option.disabled{
     pointer-events: none;
 }
 
-footer{
-    height: 60px;
+.quiz_page footer {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    min-height: 60px;
     padding: 0 30px;
     display: flex;
     justify-content: flex-end;
@@ -354,9 +364,7 @@ footer{
     border-top: 1px solid lightgrey;
 }
 
-
-
-footer button{
+.quiz_page footer button{
     height: 40px;
     padding: 0 13px;
     font-size: 18px;
@@ -375,12 +383,12 @@ footer button{
     transition: all 0.3s ease;
 }
 
-footer button:hover{
+.quiz_page footer button:hover{
     background: white;
     color: #4FD1C5;
 }
 
-footer button.show{
+.quiz_page footer button.show{
     opacity: 1;
     pointer-events: auto;
     transform: scale(1);
@@ -391,7 +399,9 @@ footer button.show{
     border-radius: 5px;
     display: flex;
     padding: 25px 30px;
-    width: 450px;
+    width: 80%;
+    max-height: 95vh; 
+    overflow-y: auto;
     align-items: center;
     flex-direction: column;
     justify-content: center;
@@ -425,7 +435,7 @@ footer button.show{
     margin: 0 10px;
     height: 45px;
     padding: 0 20px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     cursor: pointer;
     border: none;
